Fixing Form Spacing: Part 15

--- a/styles.css
+++ b/styles.css
@@ -438,7 +438,7 @@
     }
 
     #labelBottom {
-        margin-top: 100px;
+        margin-top: 200px;
     }
 
     #clockPannel {
